# Microservice-Rust

./: .gitignore  Cargo.toml  env.json.example
src/: app_state.rs  cli.rs  main.rs  settings.rs
src/logging/: init_tracer.rs  mod.rs  request_tracing.rs
src/server/: api_doc.rs  health.rs  mod.rs  serve.rs
src/storage/: connect.rs
