[package]
name = "rust-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1" }
clap = { version = "4.5.23", features = ["derive"] }
config = "0.15.4"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = "5.3.1"
utoipa-axum = "0.1.4"
utoipa-rapidoc = { version = "5.0.1", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
